feat: add keycloak config

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 		<div style="height:100%" ng-include="'app/app.tpl.html'"></div>
 
 		
+		<script type="text/javascript" src="vendor/keycloak/keycloak.min.js"></script>
+		<script type="text/javascript" src="vendor/keycloak/keycloak-authz.min.js"></script>
 		
 		<script type="text/javascript" src="vendor/traceur/bin/traceur-runtime.js?v=2.15.19-20141105194600"></script>
 		
@@ -313,6 +315,8 @@
 		<script type="text/javascript" src="src/common/underscore/underscore-service.js?v=2.15.19-20231115115607"></script>
 		
 		<script type="text/javascript" src="templates.js?v=2.15.19-20231115115607"></script>
+
+		<script type="text/javascript" src="src/app/constants.module.js"></script>
 		
 
 		
